v3.0.0/_sources/plugins/device_interface_isis_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.device_interface_isis_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.device_interface_isis_info -- Information module for Device Interface Isis
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.0.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.device_interface_isis_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Device Interface Isis.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options


.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Device Interface Isis reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Device Interface Isis object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Device Interface Isis
      cisco.dnac.device_interface_isis_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;response&quot;: [
        {
          &quot;adminStatus&quot;: &quot;string&quot;,
          &quot;className&quot;: &quot;string&quot;,
          &quot;description&quot;: &quot;string&quot;,
          &quot;deviceId&quot;: &quot;string&quot;,
          &quot;duplex&quot;: &quot;string&quot;,
          &quot;id&quot;: &quot;string&quot;,
          &quot;ifIndex&quot;: &quot;string&quot;,
          &quot;instanceTenantId&quot;: &quot;string&quot;,
          &quot;instanceUuid&quot;: &quot;string&quot;,
          &quot;interfaceType&quot;: &quot;string&quot;,
          &quot;ipv4Address&quot;: &quot;string&quot;,
          &quot;ipv4Mask&quot;: &quot;string&quot;,
          &quot;isisSupport&quot;: &quot;string&quot;,
          &quot;lastUpdated&quot;: &quot;string&quot;,
          &quot;macAddress&quot;: &quot;string&quot;,
          &quot;mappedPhysicalInterfaceId&quot;: &quot;string&quot;,
          &quot;mappedPhysicalInterfaceName&quot;: &quot;string&quot;,
          &quot;mediaType&quot;: &quot;string&quot;,
          &quot;nativeVlanId&quot;: &quot;string&quot;,
          &quot;ospfSupport&quot;: &quot;string&quot;,
          &quot;pid&quot;: &quot;string&quot;,
          &quot;portMode&quot;: &quot;string&quot;,
          &quot;portName&quot;: &quot;string&quot;,
          &quot;portType&quot;: &quot;string&quot;,
          &quot;serialNo&quot;: &quot;string&quot;,
          &quot;series&quot;: &quot;string&quot;,
          &quot;speed&quot;: &quot;string&quot;,
          &quot;status&quot;: &quot;string&quot;,
          &quot;vlanId&quot;: &quot;string&quot;,
          &quot;voiceVlan&quot;: &quot;string&quot;
        }
      ],
      &quot;version&quot;: &quot;string&quot;
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

